robot_ws/log/build_2021-04-23_14-30-25/srv_examples/stderr.log
  File "/home/ubuntu/robot_ws/install/srv_examples/lib/python3.8/site-packages/srv_examples/invert_gripper_service_client.py", line 10
    SetBool.Request(data) = False
    ^
SyntaxError: cannot assign to function call

